Agregando proyecto DI API agregar adjuntos a Orden de venta

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,9 @@
 /.vs/sap_addons_samples/FileContentIndex/af15438b-dadc-4539-a2ee-8638815c712f.vsidx
 /.vs/sap_addons_samples/FileContentIndex/e56a3d21-8e42-46b7-a729-3c239a04c099.vsidx
 /.vs/sap_addons_samples/FileContentIndex/b8452148-eadd-43e4-8ccc-285dc6a31b27.vsidx
+/DI API/AttachmentsOrderSales/.vs/AttachmentsOrderSales/FileContentIndex
+/DI API/AttachmentsOrderSales/.vs/AttachmentsOrderSales/v16/.suo
+/DI API/AttachmentsOrderSales/.vs/AttachmentsOrderSales/v17/.suo
+/DI API/AttachmentsOrderSales/AttachmentsOrderSales/obj/Debug
+/DI API/AttachmentsOrderSales/AttachmentsOrderSales/obj/Release
+*.wsuo
